<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Qr App</string>
    <string name="enter_text">Enter your text</string>
    <string name="generate">Generate QR</string>
    <string name="qr">QR Code</string>
    <string name="scan">Scan</string>
    <string name="save">Save</string>
    <string name="choose_from_gallery">Gallery</string>
    <string name="saved_success">Image Saved Success</string>
    <string name="error_in_save">Error in save image to gallery</string>
    <string name="scan_result">Scan result</string>
    <string name="copy">Copy</string>
    <string name="invalid_image">This image is not valid</string>
    <string name="data_required">You must enter text to generate QR code</string>
    <string name="not_found_image">You must generate image to save it</string>
    <string name="cancel">Cancel</string>
    <string name="call">Call</string>
    <string name="add_to_contacts">Add to contacts</string>
    <string name="open_link">Open link</string>
    <string name="send_email">Send email</string>
    <string name="search">Search</string>
    <string name="copied_success">Copied success</string>
    <string name="error_in_generate">Data too big</string>
    <string name="data_not_complete">The length of word must be 5 letters or more</string>
</resources>