<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/text_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/enter_text"
            android:background="@drawable/background_button"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"></EditText>

        <Button
            android:id="@+id/generate_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_button"
            android:padding="15dp"
            android:text="@string/generate"
            android:textColor="@color/white"></Button>

        <ImageView
            android:id="@+id/image_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/qr"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            ></ImageView>

        <Button
            android:id="@+id/scan_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_button"
            android:padding="15dp"
            android:text="@string/scan"
            android:textColor="@color/white"></Button>
    </LinearLayout>
</ScrollView>